--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 						<div class="slide__img glitch" style="background-image: url(img/3.jpg);"></div>
 						<div class="slide__text">
 							<h2 class="slide__title">this is my brain on ADHD</h2>
-							<p class="slide__description">this website showcases the art work that i create when i let my mind wander about where it will</p>
+							<p class="slide__description">this website showcases the art work that i create when i let my mind wander about.</p>
 						</div>
 					</div>
 					<div class="slide">
 						<div class="slide__img glitch" style="background-image: url(img/2.jpg);"></div>
 						<div class="slide__text">
 							<h2 class="slide__title">hidden anxiety</h2>
-							<p class="slide__description">because of my frequent untethered enthusiasm, my anxiety is often hidden or misunderstoon by people.</p>
+							<p class="slide__description">because of my frequent untethered enthusiasm, my anxiety is often hidden or misunderstood by people.</p>
 						</div>
 					</div>
 					<div class="slide">
@@ -70,35 +70,35 @@
 						<div class="slide__img glitch" style="background-image: url(img/4.jpg);"></div>
 						<div class="slide__text">
 							<h2 class="slide__title">beauty in chaos</h2>
-							<p class="slide__description">sometimes somehow, i find the beauty in the chaos.</p>
+							<p class="slide__description">sometimes, somehow, i find the beauty in the chaos.</p>
 						</div>
 					</div>
 					<div class="slide">
 						<div class="slide__img glitch" style="background-image: url(img/5.jpg);"></div>
 						<div class="slide__text">
 							<h2 class="slide__title">over enthusiasm</h2>
-							<p class="slide__description">this piece of me both scares and excites people around me depending on when it crops up.</p>
+							<p class="slide__description">this piece of me both scares and excites people around me.</p>
 						</div>
 					</div>
 					<div class="slide">
 						<div class="slide__img glitch" style="background-image: url(img/6.jpg);"></div>
 						<div class="slide__text">
 							<h2 class="slide__title">fog</h2>
-							<p class="slide__description">the times when I am not certain where i'm going and why i'm going there.</p>
+							<p class="slide__description">for the times when I am not certain where i'm going and why i'm going there.</p>
 						</div>
 					</div>
 					<div class="slide">
 						<div class="slide__img glitch" style="background-image: url(img/7.jpg);"></div>
 						<div class="slide__text">
 							<h2 class="slide__title">ocd</h2>
-							<p class="slide__description">stop bothering me. i don't need to keep checking the light switch is off.</p>
+							<p class="slide__description">stop bothering me. i don't need to keep checking if the light switch is off.</p>
 						</div>
 					</div>
 					<div class="slide">
 						<div class="slide__img glitch" style="background-image: url(img/8.jpg);"></div>
 						<div class="slide__text">
 							<h2 class="slide__title">bubbles</h2>
-							<p class="slide__description">bubbles popping in my head. shifting around just like i dread.</p>
+							<p class="slide__description">bubbles popping in my head, shifting around just like i dread.</p>
 						</div>
 					</div>
 				</div>
